WIP: Login Screen designed check - divider and icons

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,7 @@ dependencies {
     def hilt="2.44"
     implementation "com.google.dagger:hilt-android:$hilt"
     annotationProcessor "com.google.dagger:hilt-compiler:$hilt"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
+    implementation "androidx.compose.material:material-icons-extended:$compose"
 }
